<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:text="@string/age_inst"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAge"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="367dp"
        android:layout_height="91dp"
        android:backgroundTint="#858585"
        android:fontFamily="sans-serif-black"
        android:text="@string/mtitle"
        android:textAlignment="center"
        android:textColor="#F4F4F4"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="355dp"
        android:layout_height="84dp"
        android:layout_marginTop="8dp"
        android:background="#BCF4F0F0"
        android:fontFamily="sans-serif-black"
        android:text="@string/instruct"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <EditText
        android:id="@+id/inputCount"
        android:layout_width="248dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/input1_inst"
        android:inputType="number"
        android:textAllCaps="true"
        android:textColorHint="#F6F2F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/input2_inst"
        android:inputType="number"
        android:textColorHint="#F6F2F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCount"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/buttonc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>